# print-bridge

./: index.html  package.json  tsconfig.json  update-version.ts  vite.config.ts
.github/workflows/: inspect-build.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
